--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=LabourLinkBackend
 
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/authenticationDB
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/labourlink
 spring.datasource.username=root
-spring.datasource.password=Lucky2000
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
